2015-11-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/ralloc.c (packRegsForOneuse): fixed bug 2373
	* support/regression/tests/bug-2373.c: new, added

2015-11-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdcc.sln,
	* src/yacc.vcxproj: deleted yacc project
	* src/sdcc.vcxproj,
	* src/sdcc.vcxproj.filters: moved SDCC.y here for better dependencies
	* SDCC.props: new, added Visual C property sheet for generic settings like
	  boost path (default: c:\local\boost_1_59_0\)
	* src/hc08/hc08.vcxproj,
	* src/sdcc.vcxproj,
	* src/stm8/stm8.vcxproj,
	* src/z80/z80.vcxproj: use SDCC.props
	* sdas/linksrc/lkaomf51.c: output capitals depending on the zflag
	* src/common.h
	* src/stm8/ralloc2.cc (extra_ic_generated),
	* src/z80/ralloc2.cc (default_operand_cost, assign_cost, Ainst_ok,
	  rough_cost_estimate),
	* src/SDCCglue.c (printIvalChar),
	* src/SDCCopt.c (convertToFcall): fixed warnings
	* src/SDCCutil.c (isblank): added for MSVC 2010
	* support/cpp/ansidecl.h: deleted
	* support/cpp/sdcpp.vcxproj,
	* support/cpp/sdcpp.vcxproj.filters: use files in support/sdbinutils/
	* support/sdbinutils/libiberty/getpwd.c: fixed for MSVC

2015-10-30 Ben Shi <powerstudio1st AT 163 DOT com>

	* sdas/linksrc/lkmem.c:
	  Fix defects in previous commit.

2015-10-30 Ben Shi <powerstudio1st AT 163 DOT com>

	* sdas/linksrc/lkarea.c:
	* sdas/linksrc/lkmem.c:
	  Improve the error message in .mem when no enough space for the stack.
	  Suggest the largest spare space (address and size) in the internal RAM.

2015-10-28 Ben Shi <powerstudio1st AT 163 DOT com>

	* sdas/linksrc/lkmem.c:
	  Fix incorrect check of "--xram-size".

2015-10-27 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCglue.c:
	  Bug fix: char s[10] = "ab", bytes beyond "ab" sometimes aren't set to 0.

2015-10-26 Philipp Klaus Krause <pkk AT spth.de>

	* Merge cpp-merge-upstream branch to get improved standard support.

2015-10-26 Philipp Klaus Krause <pkk AT spth.de>

	* .version: