@@ -1,3 +1,10 @@
+2015-11-05 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCsymt.c:
+	  Print calling convention for functions.
+	* src/z80/peep.c:
+	  More accurate handling of register arguments in peepholes.
+
 2015-11-05 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/mcs51/ralloc.c (packRegsForOneuse): fixed bug 2373
